2007-11-10  Moritz  <moritz@g10code.com>

	* optparse.c (options_parse_argv): Removed const qualifier from
	argv.  Removed argv_cp related snippets.
	(options_parse_argv_const): New function, wrapper for
	options_parse_argv, using char_vector_dup.
	* optparse.h (options_parse_argv, options_parse_argv, const):
	Adjusted declarations.

	* support.c (char_vector_dup): Removed unused variable s. Set c[i]
	to NULL, not to a[i] (which is also NULL), because of const
	qualifier.

2007-11-04  Moritz  <moritz@g10code.com>

	* poldi-ctx.h (struct poldi_ctx_s): New members: auth_method,
	debug.

	* optparse.c (options_parse_argv): New parameter: flags; declare
	argv parameter const.  New local variable: argv_cp; use
	char_vector_dup/char_vector_free to create temporary non-const
	argv.  Include "support.h".
	* optparse.h (OPTPARSE_FLAG_DONT_SKIP_FIRST): New symbol.
	(options_parse_argv): Adjust declaration.
	* support.c (char_vector_dup, char_vector_free): New functions.
	* support.h: Declare new functions.

2007-11-03  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctx.h: Include config.h.  In case ENABLE_AUTH_METHOD_X509
	is defined: include dirmngr.h, define dirmngr_ctx_t member in
	struct poldi_ctx_s.
	* sexputil.c: New file, taken from GnuPG.
	* sexp-parse.h: Likewise.
	* convert.c: Likewise.
	* Makefile.am (libpoldi_common_a_SOURCES): Added new files.

2007-10-27  Moritz  <moritz@g10code.com>

	* poldi-ctx.h, poldi-ctx-opaque.h: New files.
	* Makefile.am (libpoldi_common_a_SOURCES): Added: poldi-ctx.h,
	poldi-ctx-opaque.h.

2007-08-16  Moritz  <moritz@g10code.com>

	* defs.h.in: Cosmetics.

2007-06-29  Moritz  <moritz@g10code.com>

	* Makefile.am (libpoldi_common_a_SOURCES): Adjusted.
	* card.c, card.h: Removed.
	* i18n.h, membuf.c, membuf.h, util.h, README: New files.
	* options.c, options.h: Renamed to optparse.c, optparse.h;
	adjusted ifndef and include line.
	* support.c: Include scd.h instead of card.h.
	(authenticate): Removed function.
	(wait_for_card): Likewise.